# komrad-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  palimpsest.toml  run_all_tests.sh
crates/komrad-cli/: Cargo.toml
crates/komrad-cli/src/: cli.rs  interactive.rs  lib.rs  repl.rs  run.rs
crates/komrad-cli/tests/: cli_tests.rs
crates/komrad-core/: Cargo.toml
crates/komrad-core/src/: agent.rs  ast.rs  channel.rs  codemap.rs  destructure.rs  dict.rs  env.rs  error.rs  evaluator.rs  expr.rs  lib.rs  list.rs  parser.rs  sexpr.rs  value.rs
crates/komrad-core/src/destructure/: assignment.rs  base.rs  command.rs  mod.rs  pattern.rs  predicate.rs
crates/komrad-highlighter/: Cargo.toml
crates/komrad-highlighter/src/: lib.rs
crates/komrad-interpreter/: Cargo.toml
crates/komrad-interpreter/src/: dynamic_agent.rs  fs_agent.rs  import_agent.rs  interpreter.rs  io_agent.rs  lib.rs  spawn_agent.rs
crates/komrad-interpreter/src/agents/: for_agent.rs  io_agent.rs  log_agent.rs  mod.rs
crates/komrad-macros/: Cargo.toml
crates/komrad-macros/src/: lib.rs
crates/komrad-macros/tests/: test_agent_macros.rs
crates/komrad-parser/: Cargo.toml
crates/komrad-parser-palimpsest/: Cargo.toml
crates/komrad-parser-palimpsest/src/: lib.rs
crates/komrad-parser/src/: lib.rs  parse_strings.rs  parse_toplevel.rs  parser.rs  result.rs  spanned.rs
crates/komrad-parser/tests/: atoms.kom  binary.kom  blocks.kom  calls.kom  destructuring.kom  dicts.kom  expander.kom  golden.rs  handlers.kom  lists.kom  statements.kom  strings.kom  test_corpus.rs  values.kom
crates/komrad-runtime/: Cargo.toml
crates/komrad-web/: Cargo.toml
crates/komrad-web/src/: http_listener.rs  http_request.rs  http_response.rs  lib.rs  web_util.rs  websocket.rs
examples/: alice-bob.kom  alice.kom  bob.kom  conditionals.kom  http-listener.kom
examples/web/: http-listener.kom  websockets.kom
examples/web/templates/: chat.html  counter.html  welcome.html
src/: main.rs
tests/: run_workspace_tests.rs
