[package]
name = "komrad-lang"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"


[dependencies]
tokio.workspace = true
komrad-cli = { path = "crates/komrad-cli" }

[workspace]
resolver = "3"
members = ["crates/komrad-cli", "crates/komrad-core", "crates/komrad-interpreter", "crates/komrad-macros", "crates/komrad-parser", "crates/komrad-web"]

[workspace.dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
base64 = "0.22.1"
sha1 = "0.11.0-pre.5"
dashmap = "7.0.0-rc2"
indexmap = { version = "2.9.0", features = ["serde", "arbitrary"] }
owo-colors = { version = "4.2.0", features = ["alloc"] }
miette = { version = "7.5.0", features = ["fancy", "derive"] }
nom = "8.0.0"
nom_locate = "5.0.0"
serde = { version = "1.0", features = ["derive", "std", "rc", "alloc"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["stream", "handshake", "url"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
uuid = { version = "1.16.0", features = ["v7", "serde", "fast-rng"] }
futures = { version = "0.3.31", features = ["alloc"] }
