[package]
name = "komrad-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
komrad-core = { path = "../komrad-core" }
komrad-parser = { path = "../komrad-parser" }
komrad-interpreter = { path = "../komrad-interpreter" }

uuid.workspace = true
clap = "4.5.36"
ratatui = { version = "0.29", features = ["macros", "palette", "all-widgets", "crossterm"] }
tui-logger = { version = "0.17.1", features = ["tracing-support", "crossterm", "formatter"] }
tui-textarea = { version = "0.7.0", features = ["ratatui", "crossterm", "arbitrary"] }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
textwrap = "0.16.2"
log = "0.4.27"
