[package]
name = "komrad-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
indexmap.workspace = true
owo-colors.workspace = true
nom.workspace = true
nom_locate.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true