[package]
name = "komrad-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
indexmap.workspace = true
owo-colors.workspace = true
nom.workspace = true
nom_locate.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.44.2", features = ["macros", "rt", "sync"] }
tracing.workspace = true
serde_json.workspace = true
miette.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.16.0", features = ["v7", "serde", "fast-rng"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.16.0", features = ["v7", "serde", "js"] }
