[package]
name = "komrad-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
komrad-core = { path = "../komrad-core" }

glob = "0.3.2"
miette.workspace = true
nom.workspace = true
nom_locate.workspace = true
owo-colors.workspace = true
tempfile = "3.19.1"
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
indexmap.workspace = true