[package]
name = "komrad-web"
version = "0.1.0"
edition = "2024"

[dependencies]
komrad-core = { path = "../komrad-core" }
komrad-macros = { path = "../komrad-macros" }

async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
futures.workspace = true
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
indexmap.workspace = true
mime_guess = "2.0.5"
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tera = "1.20.0"